--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "cheerio": "^1.0.0-rc.3",
+    "https": "^1.0.0",
     "next": "9.5.1",
+    "phantom": "^6.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
