--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:y": "node ./src/service/connector/youtube.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "bluebird": "^3.7.2",
-    "cheerio": "^1.0.0-rc.3",
-    "https": "^1.0.0",
     "next": "9.5.1",
-    "phantom": "^6.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
