--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:y": "node ./src/service/connector/youtube.js",
+    "dev:y": "node ./src/service/connector/teste.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
@@ -12,5 +12,10 @@
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.46",
+    "typescript": "^3.9.7"
   }
 }
