--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
