--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
+    "git-commit-msg-linter": "^2.4.5",
     "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
