--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,6 @@
   "dependencies": {
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
-    "git-commit-msg-linter": "^2.4.5",
     "next": "^9.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -23,6 +23,14 @@
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "git-commit-msg-linter": "^2.4.5",
+    "prettier": "^2.1.1",
     "typescript": "^3.9.7"
   }
 }
