--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
     "eslint-plugin-react": "^7.20.6",
     "git-commit-msg-linter": "^2.4.5",
     "husky": "^4.2.5",
+    "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
     "typescript": "^3.9.7"
   },
   "husky": {
-        "hooks": {
-            "pre-commit": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
-        }
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
-
+  }
 }
