--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --coverage",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "test": "jest --passWithNoTests --coverage",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "check": "npm-check -u",
+    "lint-staged:test": "npm test && lint-staged"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +26,7 @@
     "@types/jest": "^26.0.10",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "eslint-config-standard-with-typescript": "^18.0.2",
@@ -37,12 +39,13 @@
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "lint-staged": "^10.2.13",
+    "npm-check": "^5.9.2",
     "ts-jest": "^26.3.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint-staged:test"
     }
   }
 }
